# AdvendOfCode

./: README.md
AoC_2015/: puzzle_1.py  (+6 more)
AoC_2021/: .gitignore  environment.yml  pyproject.toml
AoC_2021/puzzle_1/: puzzle_1.py
AoC_2021/puzzle_10/: puzzle_10.py
AoC_2021/puzzle_11/: puzzle_11.py
AoC_2021/puzzle_12/: puzzle_12.py
AoC_2021/puzzle_13/: puzzle_13.py
AoC_2021/puzzle_14/: puzzle_14.py
AoC_2021/puzzle_15/: input_test2.txt  puzzle_15.py
AoC_2021/puzzle_16/: input_test.txt  puzzle_16.py
AoC_2021/puzzle_17/: puzzle_17.py
AoC_2021/puzzle_18/: input_test.txt  puzzle_18.py
AoC_2021/puzzle_19/: input_test2.txt  puzzle_19.py
AoC_2021/puzzle_2/: puzzle_2.py
AoC_2021/puzzle_20/: puzzle_20.py
AoC_2021/puzzle_21/: puzzle_21.py
AoC_2021/puzzle_22/: puzzle_22.py
AoC_2021/puzzle_24/: puzzle_24.py
AoC_2021/puzzle_25/: puzzle_25.py
AoC_2021/puzzle_3/: puzzle_3.py
AoC_2021/puzzle_4/: puzzle_4.py
AoC_2021/puzzle_5/: puzzle_5.py
AoC_2021/puzzle_6/: puzzle_6.py
AoC_2021/puzzle_7/: puzzle_7.py
AoC_2021/puzzle_8/: puzzle_8.py
AoC_2021/puzzle_9/: puzzle_9.py
AoC_2021/utils/: puzzle.py
AoC_2022/: environment.yml  pyproject.toml
AoC_2022/puzzle_1/: puzzle_1.py
AoC_2022/puzzle_10/: puzzle_10.py
AoC_2022/puzzle_11/: puzzle_11.py
AoC_2022/puzzle_12/: puzzle_12.py
AoC_2022/puzzle_13/: puzzle_13.py
AoC_2022/puzzle_14/: puzzle_14.py
AoC_2022/puzzle_15/: puzzle_15.py
AoC_2022/puzzle_16/: puzzle_16.py
AoC_2022/puzzle_17/: puzzle_17.py
AoC_2022/puzzle_18/: puzzle_18.py
AoC_2022/puzzle_19/: input_part2.txt  puzzle_19.py
(+86 files in other folders)
