[tool.poetry]
name = "aoc_2021"
version = "0.1.0"
description = ""
authors = ["Vojta Kuban <xmalmed@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9"
numpy = "^1.21.4"
parse = "^1.19.0"
python-dotenv = "^0.19.2"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
